# jet-sdk

./: .pypirc  README.md  pyproject.toml
src/: curriculum.py  dataset.py  eval.py  options.py  train.py
src/jet/: __init__.py  cli.py  dataset.py  decoding.py  egnine_hf.py  engine_hf.py  engine_unsloth.py  eval.py  merge.py  metrics.py  options.py  train.py
src/jet/data/: curated_datasets.json  curated_models.json
src/jet_ai_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: decoding.py  test_cli_workflow.py  test_dataset.py  test_dataset_text_field.py  test_engine_hf.py  test_eval.py  test_merge.py  test_smoke.py  test_train.py  test_train_eval.py
