[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jet-ai-sdk"
version = "0.5.0"
description = "Jet: High-level fine-tuning SDK with engine isolation (HF/Unsloth) and a clean CLI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Jet Team"}]
dependencies = [
  "transformers>=4.42",
  "datasets>=2.18",
  "evaluate>=0.4.3",
  "trl>=0.12.0",
  "unsloth>=0.9.0",
  "bitsandbytes>=0.43.0",
  "mlflow>=2.12",
]
[project.optional-dependencies]
cli = ["typer>=0.12", "rich>=13", "questionary>=2.0"]

[project.scripts]
jet = "jet.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["jet"]

[tool.setuptools.package-data]
jet = ["data/*.json"]